@@ -86,6 +86,12 @@
   </Match>
 
   <Match>
+    <Class name="org.apache.tez.client.TezClient"/>
+    <Method name="stop"/>
+    <Bug pattern="SWL_SLEEP_WITH_LOCK_HELD"/>
+  </Match>
+
+  <Match>
     <Class name="org.apache.tez.dag.api.EdgeManagerPluginOnDemand$EventRouteMetadata"/>
     <Method name="getSourceIndices"/>
     <Bug pattern="EI_EXPOSE_REP"/>
